<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="openbracket">(</string>
    <string name="closebrackets">)</string>
    <string name="dividesign">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplySign">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plusSign">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="subSign">-</string>
    <string name="allClear">AC</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
</resources>